--- a/resume.html
+++ b/resume.html
@@ -2,4 +2,4 @@
 layout: default
 ---
 
-<p><a href="mailto:zhang.carol19@gmail.com">Contact me</a> to view my resume or visit <a href="https://www.linkedin.com/in/carolzhang19">my LinkedIn</a></p>
+<p><a href="mailto:zhang.carol19@gmail.com">Contact me</a> to view my resume or visit <a href="https://www.linkedin.com/in/carolzhang19">my LinkedIn</a>.</p>
